# django-drf-project-template

./: .gitlab-ci.yml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
config/: urls.py
config/settings/: base.py  development.py  test.py
ecommerce_backend/purchases/: apps.py  exceptions.py  models.py  urls.py
ecommerce_backend/purchases/api/: serializers.py  views.py
ecommerce_backend/purchases/migrations/: 0001_initial.py
ecommerce_backend/purchases/tests/: conftest.py  factories.py  test_models.py  test_views.py
ecommerce_backend/reports/: apps.py  helpers.py  urls.py
ecommerce_backend/reports/api/: serializers.py  views.py
ecommerce_backend/reports/tests/: test_helpers.py  test_views.py
helm-chart/: values.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  webserver-deployment.yaml
helm-chart/templates/postgres/: claim.yaml  deployment.yaml  service.yaml  volume.yaml
